Services/Haproxy/nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: web
  name: nginx
spec:
  selector:
    matchLabels:
      demo: deployment
  replicas: 1
  template:
    metadata:
      labels:
        demo: deployment
        version: v1.7.9
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
---
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: nginx
spec:
  ports:
  - port: 80
    nodePort: 32514
    protocol: TCP
  selector:
    demo: deployment
  type: NodePort
